--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@ Hackespett.io
 <main>
 <h1>Hackespett.io</h1>
 <div style="border:1px solid #000;padding:20px;width:100px;float:left;height:100px">
+My Newest Post
+</div>
+<div style="border:1px solid #000;padding:20px;width:100px;float:left;height:100px">
 My Third Post
 </div>
 <div style="border:1px solid #000;padding:20px;width:100px;float:left;height:100px">
