--- a/test/index.html
+++ b/test/index.html
@@ -11,6 +11,9 @@ Test
 <main>
 <h1>Test</h1>
 <div style="border:1px solid #000;padding:20px;width:100px;float:left;height:100px">
+My Newest Post
+</div>
+<div style="border:1px solid #000;padding:20px;width:100px;float:left;height:100px">
 My Third Post
 </div>
 <div style="border:1px solid #000;padding:20px;width:100px;float:left;height:100px">
