--- a/test/index.html
+++ b/test/index.html
@@ -1,14 +1,30 @@
-<html>
+<!doctype html><html>
 <head>
 <title>
 Test
 </title>
+<meta name=viewport content="width=device-width,initial-scale=1">
 <link href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css rel=stylesheet integrity=sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC crossorigin=anonymous>
-<link rel=stylesheet href=http://hackespett.io/sass/main.min.0a129368fb7faab0d9547e29733a7c4666d51ebda534e32b5c27f008d916ead1.css>
+<link rel=stylesheet href=http://hackespett.io/sass/main.min.023f549fa82850a77e21ea113b5133ea6a609bd836d60e4ba20b85868bc96d66.css>
 </head>
 <body>
-<header>HEADER</header>
+<header class=header>
+<div class=container>
+<div class=row>
+<div class=col-lg-3>
+<div class=header__title>
+<label>Hackespett.io</label>
+</div>
+</div>
+<div class=col-lg-9>
+</div>
+</div>
+</div>
+</header>
 <main>
+<div class=container>
+<div class=row>
+<div class=col-lg-12>
 <h1>Test</h1>
 <div style="border:1px solid #000;padding:20px;width:100px;float:left;height:100px">
 My Third Post
@@ -22,8 +38,19 @@ My First Post
 <div style="border:1px solid #000;padding:20px;width:100px;float:left;height:100px">
 My Newest Post
 </div>
+</div>
+</div>
+</div>
 </main>
-<footer>FOOTER</footer>
+<footer class=footer>
+<div class=container>
+<div class=row>
+<div class=col-lg-12>
+Hackespett.io
+</div>
+</div>
+</div>
+</footer>
 <script src=https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js integrity=sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM crossorigin=anonymous></script>
 </body>
 </html>
