--- a/index.html
+++ b/index.html
@@ -25,19 +25,37 @@ Hackespett.io
 <main>
 <div class=container>
 <div class=row>
-<div class=col-lg-12>
 <h1>Hackespett.io</h1>
-<div style="border:1px solid #000;padding:20px;width:100px;float:left;height:100px">
-My Third Post
+<div class=col-lg-3>
+<div style="border:1px solid #000">
+<div class=p-5>
+<h3>My Third Post</h3>
+<p><i>Describes the blog post in a short text</i></p>
 </div>
-<div style="border:1px solid #000;padding:20px;width:100px;float:left;height:100px">
-My Second Post
 </div>
-<div style="border:1px solid #000;padding:20px;width:100px;float:left;height:100px">
-My First Post
 </div>
-<div style="border:1px solid #000;padding:20px;width:100px;float:left;height:100px">
-My Newest Post
+<div class=col-lg-3>
+<div style="border:1px solid #000">
+<div class=p-5>
+<h3>My Second Post</h3>
+<p><i>Describes the blog post in a short text</i></p>
+</div>
+</div>
+</div>
+<div class=col-lg-3>
+<div style="border:1px solid #000">
+<div class=p-5>
+<h3>My First Post</h3>
+<p><i>Describes the blog post in a short text</i></p>
+</div>
+</div>
+</div>
+<div class=col-lg-3>
+<div style="border:1px solid #000">
+<div class=p-5>
+<h3>My Newest Post</h3>
+<p><i>Describes the blog post in a short text</i></p>
+</div>
 </div>
 </div>
 </div>
