--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Hackespett.io
 </title>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <link href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css rel=stylesheet integrity=sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC crossorigin=anonymous>
-<link rel=stylesheet href=http://hackespett.io/sass/main.min.023f549fa82850a77e21ea113b5133ea6a609bd836d60e4ba20b85868bc96d66.css>
+<link rel=stylesheet href=https://hackespettane.github.io/sass/main.min.023f549fa82850a77e21ea113b5133ea6a609bd836d60e4ba20b85868bc96d66.css>
 </head>
 <body>
 <header class=header>
