deploy: ee2b21da67709e97890694684475f1311a7d6e48

--- a/test/index.html
+++ b/test/index.html
@@ -13,7 +13,7 @@ Test
 <div class=row>
 <div class=col-lg-3>
 <div class=header__title>
-<label>Hackespett.io</label>
+<label>Hackespettane</label>
 </div>
 </div>
 <div class=col-lg-9>
@@ -64,7 +64,7 @@ Test
 <div class=container>
 <div class=row>
 <div class=col-lg-12>
-Hackespett.io
+Hackespettane
 </div>
 </div>
 </div>
