--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Hackespett.io
 </title>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <link href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css rel=stylesheet integrity=sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC crossorigin=anonymous>
-<link rel=stylesheet href=https://hackespettane.github.io/sass/main.min.023f549fa82850a77e21ea113b5133ea6a609bd836d60e4ba20b85868bc96d66.css>
+<link rel=stylesheet href=https://hackespettane.github.io/sass/main.min.ee57fc98355476acdb6d1842828fa9e1fe0489834aad6083a07d9f52c770095f.css>
 </head>
 <body>
 <header class=header>
@@ -23,38 +23,63 @@ Hackespett.io
 </div>
 </header>
 <main>
+<div class=blog>
 <div class=container>
 <div class=row>
-<h1>Hackespett.io</h1>
-<div class=col-lg-3>
-<div style="border:1px solid #000">
-<div class=p-5>
-<h3>My Third Post</h3>
-<p><i>Describes the blog post in a short text</i></p>
+<div class=post>
+<div class=col-lg-12>
+<div class=post__content>
+<h3 class=post__title>
+My Third Post
+</h3>
+<i> 2022-01-08 14:09:18 +0100 +0100</i>
+<p>
+<i>Describes the blog post in a short text</i>
+</p>
+<a href=/posts/my-third-post/>Les mer</a>
 </div>
 </div>
 </div>
-<div class=col-lg-3>
-<div style="border:1px solid #000">
-<div class=p-5>
-<h3>My Second Post</h3>
-<p><i>Describes the blog post in a short text</i></p>
+<div class=post>
+<div class=col-lg-12>
+<div class=post__content>
+<h3 class=post__title>
+My Second Post
+</h3>
+<i> 2022-01-08 14:09:13 +0100 +0100</i>
+<p>
+<i>Describes the blog post in a short text</i>
+</p>
+<a href=/posts/my-second-post/>Les mer</a>
 </div>
 </div>
 </div>
-<div class=col-lg-3>
-<div style="border:1px solid #000">
-<div class=p-5>
-<h3>My First Post</h3>
-<p><i>Describes the blog post in a short text</i></p>
+<div class=post>
+<div class=col-lg-12>
+<div class=post__content>
+<h3 class=post__title>
+My First Post
+</h3>
+<i> 2022-01-08 14:09:08 +0100 +0100</i>
+<p>
+<i>Describes the blog post in a short text</i>
+</p>
+<a href=/posts/my-first-post/>Les mer</a>
 </div>
 </div>
 </div>
-<div class=col-lg-3>
-<div style="border:1px solid #000">
-<div class=p-5>
-<h3>My Newest Post</h3>
-<p><i>Describes the blog post in a short text</i></p>
+<div class=post>
+<div class=col-lg-12>
+<div class=post__content>
+<h3 class=post__title>
+My Newest Post
+</h3>
+<i> 2022-01-08 13:18:18 +0100 +0100</i>
+<p>
+<i>Describes the blog post in a short text</i>
+</p>
+<a href=/posts/my-newest-post/>Les mer</a>
+</div>
 </div>
 </div>
 </div>
