--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@ Hackespett.io
 <div class=container>
 <div class=row>
 <div class=col-lg-3>
+<a href=/>
 <div class=header__title>
 <label>Hackespettane</label>
 </div>
+</a>
 </div>
 <div class=col-lg-9>
 </div>
