--- a/index.html
+++ b/index.html
@@ -74,6 +74,20 @@ My First Post
 <div class=col-lg-12>
 <div class=post__content>
 <h3 class=post__title>
+Code That Fits in Your Head
+</h3>
+<i> 2022-01-08 13:47:16 +0100 +0100</i>
+<p>
+<i>Describes the blog post in a short text</i>
+</p>
+<a href=/posts/code-that-fits-in-your-head/>Les mer</a>
+</div>
+</div>
+</div>
+<div class=post>
+<div class=col-lg-12>
+<div class=post__content>
+<h3 class=post__title>
 My Newest Post
 </h3>
 <i> 2022-01-08 13:18:18 +0100 +0100</i>
