--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@ Om Hackespettane
 </title>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <link href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css rel=stylesheet integrity=sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC crossorigin=anonymous>
-<link rel=stylesheet href=/sass/main.min.ee57fc98355476acdb6d1842828fa9e1fe0489834aad6083a07d9f52c770095f.css>
+<link rel=stylesheet href=/sass/main.min.525ea3746bffd9860534abe13437d97bcbd88d7f30477b6198150e34f08fc90c.css>
 </head>
 <body>
 <header class=header>
@@ -14,7 +14,7 @@ Om Hackespettane
 <div class=col-lg-3>
 <a href=/>
 <div class=header__title>
-<label>Hackespettane</label>
+<label>Hackespett.io</label>
 </div>
 </a>
 </div>
@@ -36,7 +36,7 @@ Om Hackespettane
 <div class=container>
 <div class=row>
 <div class=col-lg-12>
-Hackespettane
+Hackespett.io
 </div>
 </div>
 </div>
