--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Hackespett.io
 </title>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <link href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css rel=stylesheet integrity=sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC crossorigin=anonymous>
-<link rel=stylesheet href=/sass/main.min.ee57fc98355476acdb6d1842828fa9e1fe0489834aad6083a07d9f52c770095f.css>
+<link rel=stylesheet href=/sass/main.min.525ea3746bffd9860534abe13437d97bcbd88d7f30477b6198150e34f08fc90c.css>
 </head>
 <body>
 <header class=header>
@@ -15,7 +15,7 @@ Hackespett.io
 <div class=col-lg-3>
 <a href=/>
 <div class=header__title>
-<label>Hackespettane</label>
+<label>Hackespett.io</label>
 </div>
 </a>
 </div>
@@ -25,77 +25,29 @@ Hackespett.io
 </div>
 </header>
 <main>
+<div class=component>
 <div class=blog>
 <div class=container>
 <div class=row>
-<div class=post>
-<div class=col-lg-12>
-<div class=post__content>
-<h3 class=post__title>
-Code That Fits in Your Head
-</h3>
-<i> 2022-01-08 13:00:16 +0100 +0100</i>
-<p>
-<i>Describes the blog post in a short text</i>
-</p>
-<a href=/posts/code-that-fits-in-your-head/>Les mer</a>
+<div class=col-lg-6>
+<a href=/posts/machine-learning/>
+<div class=card>
+<div class=card-body>
+<h5 class=card-title>Machine Learning</h5>
+<p class=card-text>Describes the blog post in a short text</p>
 </div>
 </div>
+</a>
 </div>
-<div class=post>
-<div class=col-lg-12>
-<div class=post__content>
-<h3 class=post__title>
-My Newest Post
-</h3>
-<i> 2022-01-08 13:18:18 +0100 +0100</i>
-<p>
-<i>Describes the blog post in a short text</i>
-</p>
-<a href=/posts/my-newest-post/>Les mer</a>
+<div class=col-lg-6>
+<a href=/posts/code-that-fits-in-your-head/>
+<div class=card>
+<div class=card-body>
+<h5 class=card-title>Code That Fits in Your Head</h5>
+<p class=card-text>Describes the blog post in a short text</p>
 </div>
 </div>
-</div>
-<div class=post>
-<div class=col-lg-12>
-<div class=post__content>
-<h3 class=post__title>
-My First Post
-</h3>
-<i> 2022-01-08 14:09:08 +0100 +0100</i>
-<p>
-<i>Describes the blog post in a short text</i>
-</p>
-<a href=/posts/my-first-post/>Les mer</a>
-</div>
-</div>
-</div>
-<div class=post>
-<div class=col-lg-12>
-<div class=post__content>
-<h3 class=post__title>
-My Second Post
-</h3>
-<i> 2022-01-08 14:09:13 +0100 +0100</i>
-<p>
-<i>Describes the blog post in a short text</i>
-</p>
-<a href=/posts/my-second-post/>Les mer</a>
-</div>
-</div>
-</div>
-<div class=post>
-<div class=col-lg-12>
-<div class=post__content>
-<h3 class=post__title>
-My Third Post
-</h3>
-<i> 2022-01-08 14:09:18 +0100 +0100</i>
-<p>
-<i>Describes the blog post in a short text</i>
-</p>
-<a href=/posts/my-third-post/>Les mer</a>
-</div>
+</a>
 </div>
 </div>
 </div>
@@ -106,7 +58,7 @@ My Third Post
 <div class=container>
 <div class=row>
 <div class=col-lg-12>
-Hackespettane
+Hackespett.io
 </div>
 </div>
 </div>
