--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Hackespett.io
 </title>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <link href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css rel=stylesheet integrity=sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC crossorigin=anonymous>
-<link rel=stylesheet href=/hackespett.io/sass/main.min.525ea3746bffd9860534abe13437d97bcbd88d7f30477b6198150e34f08fc90c.css>
+<link rel=stylesheet href=https://hackespettane.github.io/sass/main.min.525ea3746bffd9860534abe13437d97bcbd88d7f30477b6198150e34f08fc90c.css>
 </head>
 <body>
 <header class=header>
@@ -30,7 +30,7 @@ Hackespett.io
 <div class=container>
 <div class=row>
 <div class=col-lg-6>
-<a href=hackespett.io/posts/machine-learning/>
+<a href=/posts/machine-learning/>
 <div class=card>
 <div class=card-body>
 <h5 class=card-title>Machine Learning</h5>
@@ -40,7 +40,7 @@ Hackespett.io
 </a>
 </div>
 <div class=col-lg-6>
-<a href=hackespett.io/posts/code-that-fits-in-your-head/>
+<a href=/posts/code-that-fits-in-your-head/>
 <div class=card>
 <div class=card-body>
 <h5 class=card-title>Code That Fits in Your Head</h5>
