deploy: 6afac4f35e089ef0b92c4ce9ea9bda0c0f199fa9

--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@ Hackespett.io
 </a>
 </div>
 <div class=col-lg-6>
+<a href=/hackespett.io/posts/code-that-fits-in-your-head/>
+<div class=card>
+<div class=card-body>
+<h5 class=card-title>Code That Fits in Your Head</h5>
+<p class=card-text>Praktiske råd for hvordan utvikle software på en bærekraftig måte over tid, med fokus på lesbarhet og hvordan holde kontroll på kompleksiteten og dermed vedlikeholdbarheten.</p>
+</div>
+</div>
+</a>
+</div>
+<div class=col-lg-6>
 <a href=/hackespett.io/posts/example-book-review/>
 <div class=card>
 <div class=card-body>
